Log Style almost done, fixed some css visibility for application.css

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -23,6 +23,7 @@ body {
   background-color: blanchedalmond;
 }
 
+
 #editTaskForm {
   visibility: hidden;
   display: flex;
@@ -43,16 +44,16 @@ body {
 }
 
 #addTaskTask {
-  visibility: hidden;
+  /* visibility: hidden; */
   /* display: none; */
 }
 
 #editTaskBtn {
-  visibility: hidden;
+  /* visibility: hidden; */
 }
 
 #editTaskSubmitForm {
-  visibility: hidden;
+  /* visibility: hidden; */
 }
 
 /* 
